--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+altgraph==0.17
 anaconda-client==1.7.2
 anaconda-navigator==1.10.0
 anaconda-project==0.8.3
@@ -134,6 +135,7 @@ path @ file:///C:/ci/path_1596940809557/work
 pathlib2 @ file:///C:/ci/pathlib2_1594381094851/work
 pathtools==0.1.2
 patsy==0.5.1
+pefile==2019.4.18
 pep8==1.7.1
 pexpect @ file:///C:/ci/pexpect_1594383465186/work
 pickleshare @ file:///C:/ci/pickleshare_1594374056827/work
@@ -154,6 +156,8 @@ pycurl==7.43.0.6
 pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1598885001695/work
 pyflakes==2.2.0
 Pygments @ file:///tmp/build/80754af9/pygments_1604103097372/work
+pyinstaller==4.2
+pyinstaller-hooks-contrib==2021.1
 pylint @ file:///C:/ci/pylint_1598605958085/work
 PyNaCl @ file:///C:/ci/pynacl_1595009241355/work
 pyodbc===4.0.0-unsupported
