--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,85 @@
-anaconda-navigator==1.10.0
-anaconda-project==0.8.3
-argh==0.26.2
-asn1crypto==1.4.0
-astropy==4.0.2
-autopep8==1.5.4
-backports.shutil-get-terminal-size==1.0.0
-bitarray==1.6.1
-bkcharts==0.2
-bokeh==2.2.3
-boto==2.49.0
-bottleneck==1.3.2
-brotlipy==0.7.0
-conda-build==3.20.5
-conda-package-handling==1.7.2
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-cython==0.29.21
-cytoolz==0.11.0
-distributed==2.30.1
-fastcache==1.1.0
-flake8==3.8.4
-flask==1.1.2
-fsspec==0.8.3
-gevent==20.9.0
-glob2==0.7
-gmpy2==2.0.8
-h5py==2.10.0
-html5lib==1.1
-jupyter==1.0.0
-jupyterlab==2.2.6
-lxml==4.6.1
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mock==4.0.2
-more-itertools==8.5.0
-multipledispatch==0.6.0
-navigator-updater==0.2.1
-nltk==3.5
-nose==1.3.7
-numba==0.51.2
-olefile==0.46
-openpyxl==3.0.5
-partd==1.1.0
-path==15.0.0
-pathlib2==2.3.5
-pep8==1.7.1
-pipreqs==0.4.10
-ply==3.11
-pycrypto==2.6.1
-pycurl==7.43.0.6
-pydocstyle==5.1.1
-pyinstaller==4.2
-pyodbc==4.0.0-unsupported
-pyopenssl==19.1.0
-pyreadline==2.1
-pysocks==1.7.1
-pyspark==2.4.6
-pytest==0.0.0
-rope==0.18.0
-rtree==0.9.4
-scikit-image==0.17.2
-scikit-learn==0.23.2
-seaborn==0.11.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-sortedcollections==1.2.1
-sphinxcontrib-websupport==1.2.4
-spyder==4.0.1
-sqlalchemy==1.3.20
-statsmodels==0.12.0
-sympy==1.6.2
-tables==3.6.1
-unicodecsv==0.14.1
-win-inet-pton==1.1.0
-win-unicode-console==0.5
-wincertstore==0.2
-xlrd==1.2.0
-xlsxwriter==1.3.7
-xlwings==0.20.8
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf==0.30.0
+anaconda-navigator
+anaconda-project
+argh
+asn1crypto
+astropy
+autopep8
+backports.shutil-get-terminal-size
+bitarray
+bkcharts
+bokeh
+boto
+bottleneck
+brotlipy
+conda-build
+conda-package-handling
+conda-verify
+contextlib2
+cython
+cytoolz
+distributed
+fastcache
+flake8
+flask
+fsspec
+gevent
+glob2
+gmpy2
+h5py
+html5lib
+jupyter
+jupyterlab
+lxml
+mkl-fft
+mkl-random
+mkl-service
+mock
+more-itertools
+multipledispatch
+navigator-updater
+nltk
+nose
+numba
+olefile
+openpyxl
+partd
+path
+pathlib2
+pep8
+pip-chill
+pipreqs
+ply
+pycrypto
+pycurl
+pydocstyle
+pyinstaller
+pyodbc
+pyopenssl
+pyreadline
+pysocks
+pyspark
+pytest
+rope
+rtree
+scikit-image
+scikit-learn
+seaborn
+simplegeneric
+singledispatch
+sortedcollections
+sphinxcontrib-websupport
+spyder
+sqlalchemy
+statsmodels
+sympy
+tables
+unicodecsv
+win-inet-pton
+win-unicode-console
+wincertstore
+xlrd
+xlsxwriter
+xlwings
+xlwt
+xmltodict
+yapf
