--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,7 @@
-anaconda-navigator
-anaconda-project
-argh
-asn1crypto
-astropy
-autopep8
-backports.shutil-get-terminal-size
-bitarray
-bkcharts
-bokeh
-boto
-bottleneck
-brotlipy
-conda-build
-conda-package-handling
-conda-verify
-contextlib2
-cython
-cytoolz
-distributed
-fastcache
-flake8
-flask
-fsspec
-gevent
-glob2
-gmpy2
-h5py
-html5lib
-jupyter
-jupyterlab
-lxml
-mkl-fft
-mkl-random
-mkl-service
-mock
-more-itertools
-multipledispatch
-navigator-updater
-nltk
-nose
-numba
-olefile
-openpyxl
-partd
-path
-pathlib2
-pep8
-pip-chill
-pipreqs
-ply
-pycrypto
-pycurl
-pydocstyle
-pyinstaller
-pyodbc
-pyopenssl
-pyreadline
-pysocks
-pyspark
-pytest
-rope
-rtree
-scikit-image
-scikit-learn
-seaborn
-simplegeneric
-singledispatch
-sortedcollections
-sphinxcontrib-websupport
-spyder
-sqlalchemy
-statsmodels
-sympy
-tables
-unicodecsv
-win-inet-pton
-win-unicode-console
-wincertstore
-xlrd
-xlsxwriter
-xlwings
-xlwt
-xmltodict
-yapf
+et-xmlfile==1.0.1
+numpy==1.20.2
+openpyxl==3.0.7
+pandas==1.2.3
+python-dateutil==2.8.1
+pytz==2021.1
+six==1.15.0
