--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,20 @@ et-xmlfile==1.0.1
 future==0.18.2
 numpy==1.20.2
 openpyxl==3.0.7
+packaging==20.9
 pandas==1.2.3
 pefile==2019.4.18
 pyinstaller==4.2
 pyinstaller-hooks-contrib==2021.1
+pyparsing==2.4.7
+PyQt-builder==1.10.0
+PyQt6==6.1.0
+PyQt6-Qt6==6.1.0
+PyQt6-sip==13.1.0
 python-dateutil==2.8.1
 pytz==2021.1
 pywin32-ctypes==0.2.0
+sip==6.1.0
 six==1.15.0
+toml==0.10.2
 XlsxWriter==1.3.9
